[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
once_cell = "1"

[dependencies]
config = "0.11"
actix-web = "4.0.0-beta.19"
reqwest = "0.11.9"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.19"
uuid = {version = "0.8.2", features = ['v4']}
tracing = { version = "0.1.29", features = ["log"] }
tracing-actix-web = "=0.5.0-rc.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[features]

